--- a/이형철/개인페이지/index.html
+++ b/이형철/개인페이지/index.html
@@ -74,6 +74,9 @@
         .menu1:hover{
             color: gray;
         }
+        .menu2:hover{
+            color: gray;
+        }
         nav li a:link{
             color: black;
             text-decoration: none;
