--- a/이형철/개인페이지/index.html
+++ b/이형철/개인페이지/index.html
@@ -188,7 +188,7 @@
         /* works */
         .worksstatus{
             width: 100%;
-            height: 800px;
+            height: 910px;
             /* border: 1px solid; */
             text-align: center;
         }
@@ -274,17 +274,92 @@
         .contactstatus{
             width: 100%;
             height: 800px;
-            /* border: 1px solid; */
+            border: 1px solid;
         }
-        .contactstatusText{
 
-            text-align: center;
-            /* border: 1px solid; */
-        }
         .contactarea{
-            height: 700px;
+            height: 800px;
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            align-items: flex-end;
         }
 
+        .contactPhone{
+            /* border: 1px solid; */
+            width: 200px;
+            height: 200px;
+        }
+        #contactPhone:hover{
+            transform: matrix(1.5, 0, 0, 1.5, 300, -300);
+            transition: 1s;
+        }
+        .contactPhoneText{
+            display: none;
+        }
+        .contactPhone:hover .contactPhoneText{
+            display: block;
+        }
+        .contactPhone img{
+            width: 70px;
+        }
+
+        .contactMail{
+            /* border: 1px solid; */
+            width: 200px;
+            height: 200px;
+        }
+        #contactMail:hover{
+            transform: matrix(1.5, 0, 0, 1.5, 100, -300);
+            transition: 1s;
+        }
+        .contactMailText{
+            display: none;
+        }
+        .contactMail:hover .contactMailText{
+            display: block;
+        }
+        .contactMail img{
+            width: 70px;
+        }
+
+        .contactKakao{
+            /* border: 1px solid; */
+            width: 200px;
+            height: 200px;
+        }
+        #contactKakao:hover{
+            transform: matrix(1.5, 0, 0, 1.5, -100, -300);
+            transition: 1s;
+        }
+        .contactKakaoText{
+            display: none;
+        }
+        .contactKakao:hover .contactKakaoText{
+            display: block;
+        }
+        .contactKakao img{
+            width: 70px;
+        }
+
+        .contactGithub{
+            /* border: 1px solid; */
+            width: 200px;
+            height: 200px;
+        }
+        #contactGithub:hover{
+            transform: matrix(1.5, 0, 0, 1.5, -300, -300);
+            transition: 1s;
+        }
+        .contactGithubText{
+            display: none;
+        }
+        .contactGithub:hover .contactGithubText{
+            display: block;
+        }
+        .contactGithub img{
+            width: 70px;
+        }
     </style>
 
 </head>
@@ -351,7 +426,7 @@
 
                     <div class="workcontent2">
                         <h4>맡은내용 : 홈페이지 메인 캘린더위젯, 메모위젯, 메모창, 요일별 웹툰리스트</h4>
-                        <a href="https://hijunho0811.github.io/naver.html" target="_blank"><p><img src="./images/link_icon.png" alt="" width="40px"></p></a>
+                        <p><a href="https://hijunho0811.github.io/naver.html" target="_blank"><img src="./images/link_icon.png" alt="" width="40px"></a></p>
                     </div>
 
                     <div class="workscontent3" id="workscontent3">
@@ -368,10 +443,23 @@
         </div>
 
         <div class="contactstatus" id="contactstatus">
-            <div class="contactarea"></div>
-            <div class="contactstatusText">
-                <p>연락처 : 010 . 7121 . 6870</p>
-                <p>이메일 : ddochiisrich@gmail.com</p>
+            <div class="contactarea">
+            <div class="contactPhone" id="contactPhone">
+                <img src="./images/phone-icon.png">
+                <p class="contactPhoneText">010 . 7121 . 6870</p>
+            </div>
+            <div class="contactMail" id="contactMail">
+                <img src="./images/email-icon.png">
+                <p class="contactMailText">ddochiisrich@gmail.com</p>
+            </div>
+            <div class="contactKakao" id="contactKakao">
+                <img src="./images/kakao-icon.png">
+                <p class="contactKakaoText">totodscp</p>
+            </div>
+            <div class="contactGithub" id="contactGithub">
+                <img src="./images/github-icon.png">
+                <p class="contactGithubText">https://github.com/ddochiisrich/ddochi</p>
+            </div>
             </div>
         </div>
     </div>
