--- a/이형철/개인페이지/index.html
+++ b/이형철/개인페이지/index.html
@@ -400,7 +400,7 @@
         <div class="worksstatus" id="worksstatus">
             <div class="worksbutton">
                 <a href="#worksstatus"><button class="portfoliobutton" type="button">네이버</button></a>
-                <button class="portfoliobutton" type="button">Button</button>
+                <a href="./triple/index.html"><button class="portfoliobutton" type="button">트리플</button></a>
                 <button class="portfoliobutton" type="button">Button</button>
             </div>
             <div class="worksimg">
