--- a/이형철/개인페이지/index.html
+++ b/이형철/개인페이지/index.html
@@ -91,6 +91,7 @@
         .fa-code{
             font-size: 50px;
             color: black;
+            cursor: pointer;
         }
 
 
@@ -431,7 +432,7 @@
             <div class="contactarea">
                 <h1>Contact me</h1>
             <div class="contactPhone" id="contactPhone">
-                <a href="tel:010-7121-6870" class="contactPhoneLink"><img class="contactPhoneImg" id="contactPhoneImg" src="main_images/Phone-icon.png" alt="">
+                <a href="tel:010-7121-6870" class="contactPhoneLink"><img class="contactPhoneImg" id="contactPhoneImg" src="main_images/phone-icon.png" alt="">
                 <p class="contactPhoneText">010 . 7121 . 6870</p></a>
             </div>
 
@@ -454,6 +455,5 @@
     </div>
 
 </body>
-
 
 </html>
