--- a/이형철/개인페이지/triple/index.html
+++ b/이형철/개인페이지/triple/index.html
@@ -11,7 +11,7 @@
             padding: 0px;
         }
         .mainpage{
-            width: 1200;
+            width: 100%;
             /* margin: 0; */
         }
         .nav_firbanner{
@@ -316,7 +316,7 @@
         }
         .fivsectiontext span{
             font-size: 17px;
-            color: 58px;
+            color:rgb(58, 58, 58);
         }
 
         .sec5-1{
