--- a/이형철/개인페이지/index.html
+++ b/이형철/개인페이지/index.html
@@ -342,12 +342,12 @@
             /* justify-content: center; */
             /* align-items: center; */
             text-align: center;
-            border: 1px solid;
+            /* border: 1px solid; */
             /* padding-top: 50px; */
         }
 
         .contactarea h1{
-            margin-bottom: 100px;
+            margin: 120px 0px 30px;
         }
 
         .contactPhoneImg, .contactMailImg, .contactKakaoImg, .contactGithubImg{
@@ -357,9 +357,9 @@
         }
         .contactPhone, .contactMail, .contactKakao, .contactGithub{
             width: 300px;
-            margin: 10px auto;
+            margin: 30px auto;
             text-align: center;
-            border: 1px solid;
+            /* border: 1px solid; */
         }
         .contactPhone:hover{
             transform: scale(1.5);
