--- a/이형철/20240213/기초변수.html
+++ b/이형철/20240213/기초변수.html
@@ -119,7 +119,7 @@
       //복합연산자 표 만들어 보기
       var strr = "<table border='1'>";
         strr += "<tr>";
-        strr += "<td>1</td> <td>2</td> <td>3</td>";
+        strr += "<th>1</th> <td>2</td> <td>3</td>";
         strr += "</tr>";
         strr += "</table>";
 
