--- a/이형철/20240214/별찍기.html
+++ b/이형철/20240214/별찍기.html
@@ -9,19 +9,54 @@
   <script>
     for(let a = 0; a < 5; a++){
       for(let b = 0; b <= a; b++){
-        document.write("*");
+        document.write("*")
       }
-      document.write("<br>");
+      document.write("<br>")
     }
-    
+
+
     document.write("<br>")
+
 
     for(let c = 0; c < 5; c++){
       for(let d = 5; d > c; d--){
         document.write("*");
       }
-      document.write("<br>");
+      document.write("<br>")
     }
+
+    document.write("<br>")    
+
+    for(let e = 0; e < 5; e++){
+      for(let f = 4; f > e; f--){
+
+        document.write("&nbsp");
+      }
+      for(let f = 0; f <= e; f++){
+        document.write("*");
+      }
+      for(let f = 1; f <= e; f++){
+        document.write("*");
+      }
+      document.write("<br>")
+    }
+
+    document.write("<br>")
+
+    for(let g = 0; g < 5; g++){
+      for(let h = 0; h < g; h++){
+
+        document.write("&nbsp");
+      }
+      for(let h = 5; h > g; h--){
+        document.write("*");
+      }
+      for(let h = 4; h > g; h--){
+        document.write("*");
+      }
+      document.write("<br>")
+    }
+
   </script>
 </body>
 </html>
