--- a/이형철/20240214/조건연산자.html
+++ b/이형철/20240214/조건연산자.html
@@ -8,7 +8,7 @@
 <body>
   
   <script>
-    let userNumber = prompt("숫자를 입력하세요!!!!!!!!!!!!!");
+    let userNumber = prompt("숫자를 입력하세요.");
 
     /*
 
