--- a/이형철/20240215/모달창토글키바꾸기.html
+++ b/이형철/20240215/모달창토글키바꾸기.html
@@ -59,11 +59,15 @@
     open.addEventListener("click", ()=>{
       modalBox.classList.toggle("active");
       // 토글로 바꿔서 입력해보기.
+      //2️⃣ modalBox.classList.toggle("active");
+      //3️⃣ modalBox.style.display = "block";      
     });
 
     close.addEventListener("click", ()=>{
       modalBox.classList.toggle("active");
       // 토글로 바꿔서 입력해보기.
+      //2️⃣ modalBox.classList.toggle("active");
+      //3️⃣ modalBox.style.display = "none";
     })
   </script>
 </body>
