--- a/이형철/20240131/호버버튼_practice.html
+++ b/이형철/20240131/호버버튼_practice.html
@@ -25,7 +25,7 @@
             font-size: 20px;
             
         }
-        .menu:hover{
+        .menu a:hover{
             background-color: gray;
             color: white;
         }
