--- a/이형철/20240216/최대공약수_구하기.html
+++ b/이형철/20240216/최대공약수_구하기.html
@@ -26,14 +26,29 @@
     let a = firstNum;
     let b = secondNum;
 
-    function greatest(a,b){
-      if (b === 0) {
-        return a;
-      }
-      return greatest(b, a % b);
+    let big, small;
 
+    if(a>=b){
+      big = a;
+      small = b;
+    }
+    else{
+      big = b;
+      small = a;
+    }
+    function greatest(n1,n2){
+
+      if (n2 == 0) {
+        return n1;
+      }
+      return greatest(n1, a % b);
     }
 
+
+
+    // for(let i = 1; i 
+    // )
+    document.write(greatest(big,small))
   </script>
 </body>
 </html>
