--- a/이형철/20240219/getHours_3항연산자.html
+++ b/이형철/20240219/getHours_3항연산자.html
@@ -37,7 +37,7 @@
     document.querySelector("#result2").innerText = toMin;
 
     if(toNow !== null){
-      (toNow <= "12") ? pic.src = ("./images/sunset.jpg") : pic.src = ("./images/moon.jpg");
+      (toNow < "12") ? pic.src = ("./images/sunset.jpg") : pic.src = ("./images/moon.jpg");
     }
 
   </script>
