--- a/이형철/20240216/곱샘_구하기.html
+++ b/이형철/20240216/곱샘_구하기.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>곱샘 구하기</title>
+  <title>곱셈 구하기</title>
   <style>
     
   </style>
 </head>
 <body>
-  <h1>곱샘 구하기</h1>
+  <h1>곱셈 구하기</h1>
   <p>두 수를 입력한 후 [계산하기]를 클릭하세요.</p>
 
   <div id="input">
@@ -18,18 +18,18 @@
   </div>  
   
   <button id="pay">계산하기</button>
-
+  <!-- 계산결과 나올 곳 -->
   <div id="result"></div>
 
   <script>
     let pay = document.getElementById("pay");
     
-    document.getElementById("pay").onclick = function(){
+    pay.onclick = function(){
     let a = document.getElementById("firstNum").value;
     let b = document.getElementById("secondNum").value;
     let c = a * b
     let result = document.getElementById("result");
-    result.textContent = c
+    result.textContent = `답은 ${c} 입니다`;
     }
 
   </script>
