--- a/이형철/20240220/05_for배열관계.html
+++ b/이형철/20240220/05_for배열관계.html
@@ -14,8 +14,17 @@
     for (let i = 0 ; i < students.length ; i++ ){
       document.write(`${students[i]}`);
     }
+    // 🥕 i=2로 해놓고 디버깅 해보기 "우황희"님만 찍힌다
 
     // 🎃 forEach문
+
+    // 배열명.forEach(콜백 함수){...}
+    // 단순히 배열 요소만 가져와서 보여준다면
+    // for문과 forEach문 사이에 큰 차이 없다.
+    // 배열의 길이 알 수 없을 때나 배열의 요소 가져와서
+    // 함수를 실행할 때 보다 편리하다.
+    // 배열의 이름 복수형, 각 요소는 단수형
+
     const students2 = ["양은주 ", "이현학 ", "고원 <br><br>"];
 
     students2.forEach(function(student){
@@ -23,6 +32,11 @@
     });
 
     // 🎃 for of문
+
+    // 문자열이나 배열과 같은
+    // 반복 가능 자료에서 사용하는 반복문
+    // forEach와 같이 사용할 수 있다.
+    
     const students3 = ["김희선 ", "박효열 ", "김동욱 "];
 
     for (student of students3) {
